--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -62,6 +62,10 @@ html, body {
   animation: fadeIn 0.15s ease;
   opacity: 1;
 
+  @include mobile-view() {
+    right: 0.5rem;
+  }
+
   &.hide {
     visibility: hidden;
     opacity: 0;
@@ -362,8 +366,9 @@ fieldset {
 }
 
 footer {
+  width: 100%;
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin: 1.5rem 0;
 }
 
 // Dark mode adjustments
