--- a/apps/web/assets/src/stylesheets/tooltip.scss
+++ b/apps/web/assets/src/stylesheets/tooltip.scss
@@ -12,8 +12,7 @@
     min-width: 100px;
     min-width: fit-content;
     opacity: 0;
-    padding: 4px 2px;
-    padding: 4px;
+    padding: 1px 5px;
     pointer-events: none;
     position: absolute;
     text-align: center;
@@ -21,6 +20,8 @@
     transform: translateX(-50%) translateY(-100%);
     transition: opacity 0.1s;
     z-index: 99;
+
+    white-space: nowrap;
   }
 
   &::before {
