--- a/apps/web/templates/auth/create_account.html.erb
+++ b/apps/web/templates/auth/create_account.html.erb
@@ -1,4 +1,4 @@
-<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100'>
+<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100' style='flex-wrap: wrap;'>
   <div class='gra-card'>
     <div class='gra-card-content'>
       <div class='gra-card-body'>
@@ -54,4 +54,6 @@
       </div>
     </div>
   </div>
+
+  <%= render partial: './footer' %>
 </div>
