--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -10,11 +10,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='turbo-cache-control' content='no-preview'>
     <%= csrf_meta_tags %>
+    <%= favicon 'favicon.png', type: 'image/png' %>
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
     <%= stylesheet 'styles' %>
+    <script async defer data-website-id='45a84466-77f8-4c96-a2a1-514b999bcd83' src='https://rss-reader-analytics-production.up.railway.app/umami.js'></script>
     <%= javascript 'scripts', defer: true %>
-    <%= favicon 'favicon.png', type: 'image/png' %>
   </head>
   <body class='<%= hash[:theme] %>'>
     <% if authenticated? %>
