Committing to my progress because I trust myself

--- a/apps/web/assets/src/stylesheets/lib/vanilla-js-dropdown.scss
+++ b/apps/web/assets/src/stylesheets/lib/vanilla-js-dropdown.scss
@@ -18,7 +18,7 @@
   --dropdown-item-group-text-color: #a5a5a5;
 }
 
-body.dark {
+.dark {
   --dropdown-trigger-bg-color: #1f2428;
   // --dropdown-trigger-border-color: ;
   --dropdown-trigger-arrow-color: #d9dcde;
