--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -1,4 +1,4 @@
-<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100' style='flex-wrap: wrap;'>
+<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100'>
   <div class='gra-card'>
     <div class='gra-card-content'>
       <div class='gra-card-body'>
@@ -6,7 +6,7 @@
         <% if token_invalid %>
           <div class='gra-alert red' role='alert'>
             <div class='alert-icon'>
-              <i data-feather='x-circle'></i>
+              <span class='icon-outer'><%= icons[:x_circled] %></span>
             </div>
             <div class='alert-content'>
               <%= flash[:error_alert] %>
@@ -17,13 +17,13 @@
             form_for :auth, routes.process_reset_password_path, 'data-scrollfreeze': true do
               fieldset do
                 legend do
-                  h5 'Request Password Reset', class: 'gra-heading'
+                  h4 'Request Password Reset', class: 'gra-heading'
                 end
 
                 if flash[:error_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
                     div class: 'alert-icon' do
-                      i '', 'data-feather': 'x-circle'
+                      span class: 'icon-outer' do icons[:x_circled] end
                     end
                     div class: 'alert-content' do
                       flash[:error_alert]
@@ -34,7 +34,7 @@
                 if flash[:success_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
                     div class: 'alert-icon' do
-                      i '', 'data-feather': 'check-circle'
+                      span class: 'icon-outer' do icons[:check_circled] end
                     end
                     div class: 'alert-content' do
                       flash[:success_alert]
@@ -52,7 +52,7 @@
                 div class: 'gra-form-group gra-center-text' do
                   submit class: 'gra-btn gra-width-100' do
                     span 'Submit Reset Request'
-                    i '', 'data-feather': 'send', class: 'icon-right'
+                    span class: 'icon-outer' do icons[:send] end
                   end
                 end
 
@@ -74,7 +74,7 @@
                 if flash[:error_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
                     div class: 'alert-icon' do
-                      i '', 'data-feather': 'x-circle'
+                      span class: 'icon-outer' do icons[:x_circled] end
                     end
                     div class: 'alert-content' do
                       flash[:error_alert]
@@ -85,7 +85,7 @@
                 if flash[:success_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
                     div class: 'alert-icon' do
-                      i '', 'data-feather': 'check-circle'
+                      span class: 'icon-outer' do icons[:check_circled] end
                     end
                     div class: 'alert-content' do
                       flash[:success_alert]
@@ -102,7 +102,7 @@
 
                 div class: 'gra-form-group' do
                   label 'Confirm New Password', for: :password_confirmation
-                  span class: 'prefixed-input prefixed-input--password' do
+                  span class: 'prefixed-input prefixed-input--password-confirm' do
                     password_field :password_confirmation
                   end
                 end
@@ -114,7 +114,7 @@
                 div class: 'gra-form-group gra-center-text' do
                   submit class: 'gra-btn gra-width-100' do
                     span 'Set Password'
-                    i '', 'data-feather': 'check-square', class: 'icon-right'
+                    span class: 'icon-outer' do icons[:check] end
                   end
                 end
 
@@ -127,10 +127,10 @@
         <% else %>
           <div class='gra-alert red' role='alert'>
             <div class='alert-icon'>
-              <i data-feather='x-circle'></i>
+              <span class='icon-outer'><%= icons[:x_circled] %></span>
             </div>
             <div class='alert-content'>
-              The was an unknown problem loading the password reset form
+              The was an unknown problem
             </div>
           </div>
         <% end %>
