--- a/apps/web/templates/feeds/_create_form.html.erb
+++ b/apps/web/templates/feeds/_create_form.html.erb
@@ -19,7 +19,7 @@
           div class: 'gra-form-group' do
             submit class: 'gra-btn gra-width-100' do
               span 'Add'
-              i '', 'data-feather': 'plus', class: 'icon-right'
+              span class: 'icon-outer' do icons[:plus] end
             end
           end
         end
