--- a/apps/web/assets/src/stylesheets/_icon_styles.scss
+++ b/apps/web/assets/src/stylesheets/_icon_styles.scss
@@ -1,14 +1,14 @@
-﻿.feather {
-  width: 12px;
-  height: 12px;
+﻿.icon {
+  width: 1.6rem;
+  height: 1.6rem;
 
-  &.icon-left {
-    margin-right: 0.75rem;
-  }
+  // &.icon-left {
+  //   margin-right: 0.75rem;
+  // }
 
-  &.icon-right {
-    margin-left: 0.75rem;
-  }
+  // &.icon-right {
+  //   margin-left: 0.75rem;
+  // }
 
   &.link-separator {
     width: 6px;
@@ -22,8 +22,12 @@
 }
 
 .gra-alert {
-  .feather {
+  .icon {
     height: 20px;
     width: 20px;
   }
+}
+
+.icon-outer {
+  display: contents;
 }
