--- a/apps/web/assets/src/stylesheets/_navbar.scss
+++ b/apps/web/assets/src/stylesheets/_navbar.scss
@@ -23,13 +23,13 @@
         margin-right: 1rem;
       }
 
-      .feather {
-        height: 20px;
-        width: 20px;
+      .icon {
+        height: 1.5em;
+        width: 1.5em;
 
         @include mobile-view() {
-          height: 30px;
-          width: 30px;
+          height: 2em;
+          width: 2em;
         }
       }
 
