--- a/apps/web/assets/src/stylesheets/_tooltip.scss
+++ b/apps/web/assets/src/stylesheets/_tooltip.scss
@@ -4,17 +4,17 @@
   position: relative;
 
   &::after {
-    background: #1A202C;
-    border-radius: 5px;
-    color: #ddd;
+    background: var(--tooltip-color-bg);
+    border-radius: 3px;
+    color: var(--tooltip-color-text);
     content: attr(tooltip);
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.3rem;
+    font-weight: 400;
     left: 50%;
     min-width: 100px;
     min-width: fit-content;
     opacity: 0;
-    padding: 1px 5px;
+    padding: 4px 6px;
     pointer-events: none;
     position: absolute;
     text-align: center;
@@ -27,10 +27,10 @@
   }
 
   &::before {
-    border-color: #1A202C transparent transparent transparent;
+    border-color: var(--tooltip-color-bg) transparent transparent transparent;
     border-style: solid;
     border-width: 4px 6px 0 6px;
-    content: "";
+    content: '';
     left: 50%;
     opacity: 0;
     position: absolute;
@@ -55,18 +55,7 @@
   }
 }
 
-[tooltip-inverted=''] {
-  &::after {
-    background-color: #aaa;
-    color: #1A202C;
-  }
-
-  &::before {
-    border-color: #aaa transparent transparent transparent;
-  }
-}
-
-[tooltip-position="bottom"] {
+[tooltip-position='bottom'] {
   &::after {
     margin-top: 8px;
     top: 100%;
@@ -78,11 +67,11 @@
   &::before {
     margin-top: 8px;
     top: 100%;
-    transform: translateX(-50%) translatey(-100%) rotate(-180deg);
+    transform: translateX(-50%) translateY(-100%) rotate(-180deg);
   }
 }
 
-[tooltip-position="left"] {
+[tooltip-position='left'] {
   &::after {
     left: 0;
     margin-left: -8px;
@@ -94,11 +83,11 @@
     left: 0;
     margin-left: -12px;
     top: 50%;
-    transform: translatey(-50%) rotate(-90deg);
+    transform: translateY(-50%) rotate(-90deg);
   }
 }
 
-[tooltip-position="right"] {
+[tooltip-position='right'] {
   &::after {
     left: 100%;
     margin-left: 8px;
@@ -110,11 +99,11 @@
     left: 100%;
     margin-left: 1px;
     top: 50%;
-    transform: translatey(-50%) rotate(90deg);
+    transform: translateY(-50%) rotate(90deg);
   }
 }
 
-[tooltip-position="top"] {
+[tooltip-position='top'] {
   &::after,
   &::before {
     left: 50%;
