--- a/apps/web/templates/500.html.erb
+++ b/apps/web/templates/500.html.erb
@@ -2,33 +2,58 @@
 <html lang='en-US'>
   <head>
     <title>RSS Reader</title>
-    <meta name='description' content='Collect all of your favorite RSS feeds in one easy-to-use place'>
+    <meta name='description' content='Collect all of your favorite RSS feeds in one easy-to-use, minimalist interface'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href='https://fonts.googleapis.com' rel='preconnect'>
-    <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
-    <link href='/assets/styles.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.bunny.net' rel='preconnect'>
     <link href='/assets/favicon.png' rel='shortcut icon' type='image/png'>
+    <link href='/assets/styles.css' rel='stylesheet' type='text/css'>
     <style type='text/css'>
       a {
-        display: flex;
-        justify-content: center;
         align-items: center;
+        display: inline-flex;
         gap: 0.5rem;
+        justify-content: center;
       }
 
-      .feather {
-        width: 2rem;
-        height: 2rem;
+      .icon {
+        height: 1em;
+        width: 1em;
+      }
+
+      hr {
+        background: rgb(95, 103, 109);
+        border: none;
+        height: 1px;
+        margin: 1.6rem 0;
+        opacity: 0.5;
+        width: 50%;
       }
 
       #notice {
         z-index: 1;
       }
 
+      #notice > div {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+        justify-content: center;
+      }
+
+      #notice p {
+        margin: 0 0 1.6rem;
+      }
+
+      #notice p a {
+        text-decoration: underline;
+      }
+
       footer {
-        position: absolute;
         bottom: 1rem;
         left: 0;
+        position: absolute;
         right: 0;
         z-index: 2;
       }
@@ -37,24 +62,26 @@
   <body>
     <div id='notice'>
       <div>
-        <h1>An Unexpected Error Occurred</h1>
-        <h3>
-          We've been notified and will do what we can to figure things out.
-        <h3>
-        <h3>
-          <a href='/'>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevrons-left">
-              <polyline points="11 17 6 12 11 7"></polyline>
-              <polyline points="18 17 13 12 18 7"></polyline>
-            </svg>
-            Back to Feeds
-          </a>
-        </h3>
+        <h2>An Unexpected Error Occurred</h2>
+        <hr>
+        <p>
+          If you continue experiencing issues, please reach out to
+          <a href='mailto:parker@parkersprouse.me'>parker@parkersprouse.me</a> and let me know.
+        </p>
+        <a href='/'>
+          <svg class='icon' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='currentColor' viewBox='0 0 256 256'>
+            <path d='M204.24,203.76a6,6,0,1,1-8.48,8.48l-80-80a6,6,0,0,1,0-8.48l80-80a6,6,0,0,1,8.48,8.48L128.49,128ZM48.49,128l75.75-75.76a6,6,0,0,0-8.48-8.48l-80,80a6,6,0,0,0,0,8.48l80,80a6,6,0,1,0,8.48-8.48Z'></path>
+          </svg>
+          Home
+        </a>
       </div>
     </div>
 
     <footer>
       <a href='mailto:parker@parkersprouse.me'>
+        <svg class='icon' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='currentColor' viewBox='0 0 256 256'>
+          <path d='M224,50H32a6,6,0,0,0-6,6V192a14,14,0,0,0,14,14H216a14,14,0,0,0,14-14V56A6,6,0,0,0,224,50ZM208.58,62,128,135.86,47.42,62ZM216,194H40a2,2,0,0,1-2-2V69.64l86,78.78a6,6,0,0,0,8.1,0L218,69.64V192A2,2,0,0,1,216,194Z'></path>
+        </svg>
         parker@parkersprouse.me
       </a>
     </footer>
