--- a/apps/web/templates/auth/create_account.html.erb
+++ b/apps/web/templates/auth/create_account.html.erb
@@ -1,4 +1,4 @@
-<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100' style='flex-wrap: wrap;'>
+<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100'>
   <div class='gra-card'>
     <div class='gra-card-content'>
       <div class='gra-card-body'>
@@ -6,13 +6,13 @@
           form_for :auth, routes.process_create_account_path, 'data-scrollfreeze': true do
             fieldset do
               legend do
-                h5 'Create Account', class: 'gra-heading'
+                h4 'Create Account', class: 'gra-heading'
               end
 
               if flash[:error_alert].present?
                 div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
                   div class: 'alert-icon' do
-                    i '', 'data-feather': 'x-circle'
+                    span class: 'icon-outer' do icons[:x_circled] end
                   end
                   div class: 'alert-content' do
                     flash[:error_alert]
@@ -23,7 +23,7 @@
               if flash[:success_alert].present?
                 div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
                   div class: 'alert-icon' do
-                    i '', 'data-feather': 'check-circle'
+                    span class: 'icon-outer' do icons[:check_circled] end
                   end
                   div class: 'alert-content' do
                     flash[:success_alert]
@@ -40,8 +40,8 @@
 
               div class: 'gra-form-group gra-center-text' do
                 submit class: 'gra-btn gra-width-100' do
-                  span 'Create Account'
-                  i '', 'data-feather': 'user-plus', class: 'icon-right'
+                  span 'Submit'
+                  span class: 'icon-outer' do icons[:user_plus] end
                 end
               end
 
