--- a/apps/web/templates/auth/sign_in.html.erb
+++ b/apps/web/templates/auth/sign_in.html.erb
@@ -6,13 +6,13 @@
           form_for :auth, routes.process_sign_in_path, 'data-scrollfreeze': true do
             fieldset do
               legend do
-                h5 'Sign In', class: 'gra-heading'
+                h4 'Sign In', class: 'gra-heading'
               end
 
               if flash[:error_alert].present?
                 div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
                   div class: 'alert-icon' do
-                    i '', 'data-feather': 'x-circle'
+                    span class: 'icon-outer' do icons[:x_circled] end
                   end
                   div class: 'alert-content' do
                     flash[:error_alert]
@@ -23,7 +23,7 @@
               if flash[:success_alert].present?
                 div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
                   div class: 'alert-icon' do
-                    i '', 'data-feather': 'check-circle'
+                    span class: 'icon-outer' do icons[:check_circled] end
                   end
                   div class: 'alert-content' do
                     flash[:success_alert]
@@ -47,14 +47,14 @@
 
               div class: 'gra-form-group gra-center-text' do
                 submit class: 'gra-btn gra-width-100' do
-                  span 'Sign In'
-                  i '', 'data-feather': 'log-in', class: 'icon-right'
+                  span 'Submit'
+                  span class: 'icon-outer' do icons[:sign_in] end
                 end
               end
 
               div class: 'gra-form-group auth-form-links' do
                 a 'Forgot Password?', href: routes.reset_password_path
-                i '', 'data-feather': 'circle', class: 'link-separator'
+                span class: 'icon-outer' do icons[:dot] end
                 a 'Create Account', href: routes.create_account_path
               end
             end
