--- a/apps/web/templates/feeds/_delete_form.html.erb
+++ b/apps/web/templates/feeds/_delete_form.html.erb
@@ -4,10 +4,10 @@
       div class: 'gra-form-actions' do
         submit class: 'gra-btn' do
           span 'Delete'
-          i '', 'data-feather': 'x', class: 'icon-right'
+          span class: 'icon-outer' do icons[:trash] end
         end
         a class: 'gra-btn gra-btn-outline', 'data-controller': 'delete', 'data-action': 'click->delete#hide', 'data-id': parsed_feed[:id] do
-          i '', 'data-feather': 'arrow-left', class: 'icon-left'
+          span class: 'icon-outer' do icons[:arrow_left] end
           span 'Back'
         end
       end
