--- a/apps/web/templates/feeds/show.html.erb
+++ b/apps/web/templates/feeds/show.html.erb
@@ -3,13 +3,13 @@
     <h5 class='gra-card-title hidden-mobile'>
       <%= parsed_feed[:title] %>
       <span tooltip='refresh' data-controller='refresh' data-action='click->refresh#action' data-id='<%= parsed_feed[:id] %>'>
-        <i data-feather='refresh-cw'></i>
+        <span class='icon-outer'><%= icons[:refresh] %></span>
       </span>
       <span tooltip='edit' data-controller='edit' data-action='click->edit#showEdit' data-id='<%= parsed_feed[:id] %>'>
-        <i data-feather='edit'></i>
+        <span class='icon-outer'><%= icons[:edit] %></span>
       </span>
       <span tooltip='delete' data-controller='delete' data-action='click->delete#show' data-id='<%= parsed_feed[:id] %>'>
-        <i data-feather='x-circle'></i>
+        <span class='icon-outer'><%= icons[:trash] %></span>
       </span>
     </h5>
 
@@ -20,19 +20,19 @@
 
       <div class='feed-actions'>
         <span data-controller='reorder' data-action='click->reorder#down' data-id='<%= parsed_feed[:id] %>'>
-          <i data-feather='arrow-down'></i>
+          <span class='icon-outer'><%= icons[:arrow_down] %></span>
         </span>
         <span data-controller='reorder' data-action='click->reorder#up' data-id='<%= parsed_feed[:id] %>'>
-          <i data-feather='arrow-up'></i>
+          <span class='icon-outer'><%= icons[:arrow_up] %></span>
         </span>
         <span data-controller='refresh' data-action='click->refresh#action' data-id='<%= parsed_feed[:id] %>'>
-          <i data-feather='refresh-cw'></i>
+          <span class='icon-outer'><%= icons[:refresh] %></span>
         </span>
         <span data-controller='edit' data-action='click->edit#showEdit' data-id='<%= parsed_feed[:id] %>'>
-          <i data-feather='edit'></i>
+          <span class='icon-outer'><%= icons[:edit] %></span>
         </span>
         <span data-controller='delete' data-action='click->delete#show' data-id='<%= parsed_feed[:id] %>'>
-          <i data-feather='x-circle'></i>
+          <span class='icon-outer'><%= icons[:trash] %></span>
         </span>
       </div>
     </h5>
@@ -49,6 +49,7 @@
       <% if parsed_feed[:error].present? %>
         <%= parsed_feed[:error] %>
       <% end %>
+
       <% if parsed_feed[:entries].present? %>
         <ul class='gra-list'>
           <% parsed_feed[:entries].each do |entry| %>
