--- a/apps/web/assets/src/stylesheets/_navbar.scss
+++ b/apps/web/assets/src/stylesheets/_navbar.scss
@@ -26,12 +26,12 @@
       }
 
       .icon {
-        height: 1.5em;
-        width: 1.5em;
+        height: 3rem;
+        width: 3rem;
 
         @include mobile-view() {
-          height: 2em;
-          width: 2em;
+          height: 2.5rem;
+          width: 2.5rem;
         }
       }
 
