--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -1,4 +1,4 @@
-<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100'>
+<div class='auth-form-container centered-container gra-flex gra-flex-jc-c gra-height-100'>
   <div class='gra-card'>
     <div class='gra-card-content'>
       <div class='gra-card-body'>
@@ -16,9 +16,9 @@
           <%=
             form_for :auth, routes.process_reset_password_path, 'data-scrollfreeze': true do
               fieldset do
-                legend do
-                  h4 'Request Password Reset', class: 'gra-heading'
-                end
+                # legend do
+                #   h4 'Request Password Reset', class: 'gra-heading'
+                # end
 
                 if flash[:error_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
@@ -49,27 +49,31 @@
                   end
                 end
 
-                div class: 'gra-form-group gra-center-text' do
+                div class: 'gra-form-group gra-center-text auth-form-actions' do
                   submit class: 'gra-btn gra-width-100' do
-                    span 'Submit Reset Request'
+                    span 'Request Password Reset'
                     span class: 'icon-outer' do icons[:send] end
                   end
-                end
 
-                div class: 'gra-form-group auth-form-links' do
-                  a 'Sign In', href: routes.sign_in_path
+                  a href: routes.sign_in_path, class: 'gra-btn gra-btn-outline gra-btn-small gra-width-100' do
+                    'Sign In'
+                  end
                 end
               end
             end
           %>
         <% elsif providing_new_password %>
           <%=
+            new_password_label = new_account ? 'Password' : 'New Password'
+            confirm_new_password_label = new_account ? 'Confirm Password' : 'Confirm New Password'
+            submit_label = new_account ? 'Assign Password' : 'Update Password'
+
             form_for :auth, routes.process_reset_password_path, 'data-scrollfreeze': true do
               fieldset do
-                legend do
-                  title = new_account ? 'Create a password for your account' : 'Set a new password'
-                  h5 title, class: 'gra-heading'
-                end
+                # legend do
+                #   title = new_account ? 'Create a password for your account' : 'Set a new password'
+                #   h5 title, class: 'gra-heading'
+                # end
 
                 if flash[:error_alert].present?
                   div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
@@ -94,14 +98,14 @@
                 end
 
                 div class: 'gra-form-group' do
-                  label 'New Password', for: :password
+                  label new_password_label, for: :password
                   span class: 'prefixed-input prefixed-input--password' do
                     password_field :password
                   end
                 end
 
                 div class: 'gra-form-group' do
-                  label 'Confirm New Password', for: :password_confirmation
+                  label confirm_new_password_label, for: :password_confirmation
                   span class: 'prefixed-input prefixed-input--password-confirm' do
                     password_field :password_confirmation
                   end
@@ -111,15 +115,15 @@
                   hidden_field :token, value: params.get(:token)
                 end
 
-                div class: 'gra-form-group gra-center-text' do
+                div class: 'gra-form-group gra-center-text auth-form-actions' do
                   submit class: 'gra-btn gra-width-100' do
-                    span 'Set Password'
+                    span submit_label
                     span class: 'icon-outer' do icons[:check] end
                   end
-                end
 
-                div class: 'gra-form-group auth-form-links' do
-                  a 'Sign In', href: routes.sign_in_path
+                  a href: routes.sign_in_path, class: 'gra-btn gra-btn-outline gra-btn-small gra-width-100' do
+                    'Sign In'
+                  end
                 end
               end
             end
