--- a/apps/web/templates/auth/sign_in.html.erb
+++ b/apps/web/templates/auth/sign_in.html.erb
@@ -1,13 +1,13 @@
-<div class='content-container centered-container gra-flex gra-flex-jc-c gra-height-100' style='flex-wrap: wrap;'>
+<div class='auth-form-container centered-container gra-flex gra-flex-jc-c gra-height-100' style='flex-wrap: wrap;'>
   <div class='gra-card'>
     <div class='gra-card-content'>
       <div class='gra-card-body'>
         <%=
           form_for :auth, routes.process_sign_in_path, 'data-scrollfreeze': true do
             fieldset do
-              legend do
-                h4 'Sign In', class: 'gra-heading'
-              end
+              # legend do
+              #  h4 'Sign In', class: 'gra-heading'
+              # end
 
               if flash[:error_alert].present?
                 div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
@@ -45,17 +45,18 @@
                 end
               end
 
-              div class: 'gra-form-group gra-center-text' do
+              div class: 'gra-form-group gra-center-text auth-form-actions' do
                 submit class: 'gra-btn gra-width-100' do
-                  span 'Submit'
+                  span 'Sign In'
                   span class: 'icon-outer' do icons[:sign_in] end
                 end
-              end
 
-              div class: 'gra-form-group auth-form-links' do
+                a href: routes.create_account_path, class: 'gra-btn gra-btn-outline gra-btn-small gra-width-100' do
+                  span 'Create Account'
+                  span class: 'icon-outer' do icons[:user_dashed] end
+                end
+
                 a 'Forgot Password?', href: routes.reset_password_path
-                span class: 'icon-outer' do icons[:dot] end
-                a 'Create Account', href: routes.create_account_path
               end
             end
           end
